--- a/index.html
+++ b/index.html
@@ -1,72 +1,69 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Communauté Sport & Bonus</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>مجتمع خاص</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      font-family: Tahoma, Arial, sans-serif;
+      background: #0f172a;
       color: #ffffff;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
     }
-    .container {
-      background: rgba(0, 0, 0, 0.5);
-      padding: 30px;
+    .box {
+      background: #111827;
+      padding: 28px;
       max-width: 420px;
       width: 90%;
-      border-radius: 16px;
+      border-radius: 14px;
       text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
     }
     h1 {
-      font-size: 24px;
-      margin-bottom: 15px;
+      font-size: 22px;
+      margin-bottom: 12px;
     }
     p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 25px;
-      color: #e0e0e0;
+      font-size: 15px;
+      line-height: 1.7;
+      margin-bottom: 22px;
+      color: #e5e7eb;
     }
-    .btn {
+    a.btn {
       display: inline-block;
-      padding: 14px 26px;
-      background: #0088cc;
-      color: #fff;
-      text-decoration: none;
-      font-size: 18px;
+      background: #22c55e;
+      color: #000;
+      padding: 14px 28px;
       border-radius: 30px;
-      transition: background 0.3s ease;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: bold;
     }
-    .btn:hover {
-      background: #006fa3;
-    }
-    .note {
-      margin-top: 20px;
+    .footer {
+      margin-top: 18px;
       font-size: 13px;
-      color: #bbbbbb;
+      color: #9ca3af;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Communauté Privée & Contenu Exclusif</h1>
+  <div class="box">
+    <h1>مرحبا بك 👋</h1>
     <p>
-      Rejoignez une communauté active dédiée aux analyses sportives,
-      aux opportunités exclusives et aux mises à jour quotidiennes.
-      <br /><br />
-      L’accès au contenu complet est disponible uniquement via notre canal Telegram.
+      انضم إلى مجتمع خاص يهتم بالمحتوى الرياضي،
+والتحليلات، والسكريبتات الحصرية.
+<br><br>
+الوصول الكامل متوفر فقط عبر قناة تلغرام الرسمية.
     </p>
     <a class="btn" href="https://t.me/Group_adamox" target="_blank">
-      Rejoindre le canal Telegram
+      الانضمام إلى تلغرام
     </a>
-    <div class="note">
-      Accès gratuit • Pas de spam • Communauté sérieuse
+    <div class="footer">
+      مجاني • بدون إزعاج • مجتمع موثوق
     </div>
   </div>
 </body>
