Add WhatsApp join link to index.html

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     <a class="btn" href="https://t.me/Group_adamox" target="_blank">
       الانضمام إلى تلغرام
     </a>
+    <br><br>
+    <a class="btn" href="https://whatsapp.com/channel/0029VbBzQOlIiRoveVqEOs2B" target="_blank" style="background:#25D366; color:#000;">
+      الانضمام إلى واتساب
+    </a>
     <div class="footer">
       مجاني • بدون إزعاج • مجتمع موثوق
     </div>
